--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -136,6 +136,11 @@
                         <div data-i18n="Master Bulan">Master Bulan</div>
                     </a>
                 </li>
+                <li class="menu-item">
+                    <a th:href="@{~/master/siswa}" class="menu-link">
+                        <div data-i18n="Master Siswa">Master Siswa</div>
+                    </a>
+                </li>
             </ul>
         </li>
 
