--- a/src/main/resources/templates/pages/master/siswa/index.html
+++ b/src/main/resources/templates/pages/master/siswa/index.html
@@ -8,32 +8,47 @@
 <body>
 <!-- Content -->
 <div class="container-xxl flex-grow-1 container-p-y" layout:fragment="content">
-    <!-- Content -->
+    <!-- Invoice List Table -->
     <div class="card">
-        <h5 class="card-header">Data Siswa</h5>
+        <div class="card-header">
+            <div class="d-flex align-items-md-end justify-content-md-between">
+                <h5 class="card-title mb-0" id="siswa-title" th:href="@{~/master/siswa/data}">Siswa</h5>
+                <button class="btn rounded-pill btn-primary btn-sm" id="btn-add" th:href="@{~/master/siswa/add}">
+                    <i class="ti ti-check"></i> &nbsp;
+                    Tambah Data Siswa
+                </button>
+            </div>
+            <div class="demo-inline-spacing d-flex align-items-start justify-content-start">
+                <button class="btn btn-sm btn-secondary">Copy</button>
+                <button class="btn btn-sm btn-info">CSV</button>
+                <button class="btn btn-sm btn-success">Excel</button>
+                <button class="btn btn-sm btn-danger">PDF</button>
+                <button class="btn btn-sm btn-primary">Print</button>
+            </div>
+        </div>
         <div class="card-body">
             <div class="table-responsive text-nowrap">
-                <table class="table table-striped">
+                <table id="table-siswa" class="table table-striped">
                     <thead class="table-light">
                     <tr>
-                        <th></th>
-                        <th>Kode Level</th>
-                        <th>Nama Level</th>
-                        <th>Status</th>
-                        <th>Riwayat</th>
+                        <th>No.</th>
+                        <th>NISN</th>
+                        <th>Nama</th>
+                        <th>kotaTempatLahir</th>
+                        <th>tanggalLahir</th>
                         <th class="cell-fit">Actions</th>
                     </tr>
                     </thead>
-                    <tbody class="table-border-bottom-0">
-
-                    </tbody>
                 </table>
             </div>
         </div>
     </div>
     <!-- / Content -->
 </div>
-
 <!-- / Content -->
+
+<th:block layout:fragment="script">
+    <script th:src="@{~/scripts/master-siswa.js}"></script>
+</th:block>
 </body>
 </html>
