fix:index, validasi, add

--- a/src/main/resources/templates/pages/master/level/edit.html
+++ b/src/main/resources/templates/pages/master/level/edit.html
@@ -7,6 +7,12 @@
         <div class="modal-body">
             <div class="row">
                 <div class="col mb-3">
+                    <label for="nama" class="form-label">Id Lembaga</label>
+                    <input type="text" id="idLembaga" name="kode" class="form-control" placeholder="Id Lembaga" />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col mb-3">
                     <label for="kode" class="form-label">Kode Level</label>
                     <input type="hidden" id="id" name="id"/>
                     <input type="text" id="kode" name="kode" class="form-control" placeholder="Kode Level" />
@@ -23,14 +29,6 @@
                     <label for="status" class="form-label">Status</label>
                     <select id="status" name="status" class="form-select">
                         <option value="">Pilih Status</option>
-                        <option value="1">Aktif</option>
-                        <option value="0">Non Aktif</option>
-                    </select>
-                </div>
-                <div class="col mb-0">
-                    <label for="riwayat" class="form-label">Status Riwayat</label>
-                    <select id="riwayat" name="riwayat" class="form-select">
-                        <option value="">Pilih Riwayat</option>
                         <option value="1">Aktif</option>
                         <option value="0">Non Aktif</option>
                     </select>
