--- a/src/main/resources/templates/pages/master/level/index.html
+++ b/src/main/resources/templates/pages/master/level/index.html
@@ -34,11 +34,11 @@
                 <table id="table-level" class="table table-striped">
                     <thead class="table-light">
                         <tr>
-                            <th></th>
+                            <th>No</th>
+                            <th>Id Lembaga</th>
                             <th>Kode Level</th>
                             <th>Nama Level</th>
                             <th>Status</th>
-                            <th>Riwayat</th>
                             <th class="cell-fit">Actions</th>
                         </tr>
                     </thead>
