--- a/src/main/resources/templates/pages/master/level/delete.html
+++ b/src/main/resources/templates/pages/master/level/delete.html
@@ -7,6 +7,12 @@
         <div class="modal-body">
             <div class="row">
                 <div class="col mb-3">
+                    <label for="nama" class="form-label">Id Lembaga</label>
+                    <input type="number" id="idLembaga" name="kode" class="form-control" placeholder="Id Lembaga" />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col mb-3">
                     <label for="kode" class="form-label">Kode Level</label>
                     <input type="hidden" id="id" name="id" />
                     <input type="text" id="kode" name="kode" class="form-control" placeholder="Kode Level" />
@@ -15,7 +21,7 @@
             <div class="row">
                 <div class="col mb-3">
                     <label for="nama" class="form-label">Nama Level</label>
-                    <input type="text" id="nama" name="kode" class="form-control" placeholder="Nama Level" />
+                    <input type="text" id="nama" name="kode" class="form-control" placeholder="Nama Level" th:value=""/>
                 </div>
             </div>
             <div class="row g-2">
@@ -27,21 +33,13 @@
                         <option value="0">Non Aktif</option>
                     </select>
                 </div>
-                <div class="col mb-0">
-                    <label for="riwayat" class="form-label">Status Riwayat</label>
-                    <select id="riwayat" name="riwayat" class="form-select">
-                        <option value="">Pilih Riwayat</option>
-                        <option value="1">Aktif</option>
-                        <option value="0">Non Aktif</option>
-                    </select>
-                </div>
             </div>
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-label-secondary" data-bs-dismiss="modal">
                 Close
             </button>
-            <button type="submit" class="btn btn-danger">Save changes</button>
+            <button type="submit" class="btn btn-danger">Delete</button>
         </div>
     </div>
 </form>
