--- a/src/main/resources/templates/pages/master/gedung/delete.html
+++ b/src/main/resources/templates/pages/master/gedung/delete.html
@@ -1,5 +1,6 @@
 <form xmlns:th="http://www.thymeleaf.org" th:id="form-level" th:action="@{~/master/gedung/remove}"
       th:method="post" th:object="${gedung}">
+    <input type="hidden" name="id" th:value="${gedung.id}">
     <div class="modal-content">
         <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLabel4">Delete Gedung</h5>
