--- a/src/main/resources/templates/pages/master/mapel/edit.html
+++ b/src/main/resources/templates/pages/master/mapel/edit.html
@@ -1,74 +1,37 @@
-<form xmlns:th="http://www.thymeleaf.org" th:id="form-level"  th:action="@{~/master/mapel/update}" th:method="post">
+<form xmlns:th="http://www.thymeleaf.org" th:id="form-mapel" th:action="@{~/master/mapel/update}"
+      th:method="post" th:object="${mapel}">
+    <input type="hidden" name="id" th:value="${mapel.id}">
     <div class="modal-content">
         <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLabel4">Edit Mata Pelajaran</h5>
-            <button type="button" class="btn btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
+            <div th:if="${#fields.hasAnyErrors()}" class="alert-danger errors" role="alert">
+                <ul>
+                    <li th:each="err : ${#fields.allErrors()}" th:text="${err}" />
+                </ul>
+            </div>
             <div class="row">
-                <div class="col-lg-3 mb-3">
-                    <label for="kodeMapel" class="form-label">Kode Mapel</label>
-                    <input type="text" id="kodeMapel" name="kodeMapel" class="form-control" placeholder="Kode Mapel" />
-                </div>
-                <div class="col-lg-6 mb-6">
-                    <label for="namaMapel" class="form-label">Nama Mapel</label>
-                    <input type="text" id="namaMapel" name="namaMapel" class="form-control" placeholder="Nama Mapel" />
-                </div>
-                <div class="col-lg-3 mb-3">
-                    <label for="agama" class="form-label">Mapel Agama</label>
-                    <select id="agama" name="agama" class="form-select">
-                        <option value="">Pilih Mapel Agama</option>
-                    </select>
+                <div class="col mb-3">
+                    <label for="kode" class="form-label">Kode</label>
+                    <input type="text" id="kode" name="kode" th:value="${mapel.kode}"
+                           th:class="${#fields.hasErrors('kode')}? 'form-control is invalid' : 'form-control'" />
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-6 mb-3">
-                    <label for="level" class="form-label">Level</label>
-                    <select id="level" name="level" class="form-select">
-                        <option value="">Pilih Level</option>
-                    </select>
-                </div>
-                <div class="col-lg-3 mb-3">
-                    <label for="jadwal" class="form-label">Jadwal Pelajaran</label>
-                    <select id="jadwal" name="jadwal" class="form-select">
-                        <option value="">Pilih Jadwal</option>
-                    </select>
-                </div>
-                <div class="col-lg-3 mb-3">
-                    <label for="status" class="form-label">Status Mapel</label>
-                    <select id="status" name="status" class="form-select">
-                        <option value="">Pilih Status Mapel</option>
-                    </select>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-3 mb-2">
-                    <label for="kurikulum" class="form-label">Kurikulum</label>
-                    <select id="kurikulum" name="kurikulum" class="form-select">
-                        <option value="">Pilih Kurikulum</option>
-                    </select>
-                </div>
-                <div class="col-lg-3 mb-2">
-                    <label for="kelompok" class="form-label">Kelompok Mapel</label>
-                    <select id="kelompok" name="kelompok" class="form-select">
-                        <option value="">Pilih Kelompok</option>
-                    </select>
-                </div>
-                <div class="col-lg-3 mb-2">
-                    <label for="urutan" class="form-label">Urutan</label>
-                    <input type="text" id="urutan" name="urutan" class="form-control" placeholder="Urutan" />
-                </div>
-                <div class="col-lg-3 mb-2">
-                    <label for="kkm" class="form-label">KKM</label>
-                    <input type="text" id="kkm" name="kkm" class="form-control" placeholder="KKM" />
+                <div class="col mb-3">
+                    <label for="nama" class="form-label">Nama</label>
+                    <input type="text" id="nama" name="nama" th:value="${mapel.nama}"
+                           th:class="${#fields.hasErrors('nama')}? 'form-control is-invalid': 'form-control'" />
                 </div>
             </div>
         </div>
-        <div class="modal-footer">
+        <div class="modal-footer input-group">
+            <button type="submit" class="btn btn-warning">Save Changes</button>
             <button type="button" class="btn btn-label-secondary" data-bs-dismiss="modal">
                 Close
             </button>
-            <button type="submit" class="btn btn-warning">Save Changes</button>
         </div>
     </div>
 </form>
