feat : fixing siswa edit update delete + validasi

--- a/src/main/resources/templates/pages/master/siswa/delete.html
+++ b/src/main/resources/templates/pages/master/siswa/delete.html
@@ -3,7 +3,7 @@
     <input type="hidden" name="id" th:value="${siswa.id}">
     <div class="modal-content">
         <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel4">Edit Data Siswa</h5>
+            <h5 class="modal-title" id="exampleModalLabel4">Delete Data Siswa</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
