fixing kurikulum insert update delete read

--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -132,8 +132,8 @@
                     </a>
                 </li>
                 <li class="menu-item">
-                    <a th:href="@{~/master/bulan}" class="menu-link">
-                        <div data-i18n="Master Bulan">Master Bulan</div>
+                    <a th:href="@{~/master/kurikulum}" class="menu-link">
+                        <div data-i18n="Kurikulum">Master Kurikulum</div>
                     </a>
                 </li>
                 <li class="menu-item">
