--- a/src/main/resources/templates/pages/master/lookup/delete.html
+++ b/src/main/resources/templates/pages/master/lookup/delete.html
@@ -1,39 +1,34 @@
-<form xmlns:th="http://www.thymeleaf.org" th:id="form-level" th:action="@{~/master/level/remove}" th:method="post">
+<form xmlns:th="http://www.thymeleaf.org" th:id="form-lookup" th:action="@{~/master/lookup/remove}"
+      th:method="post" th:object="${lookup}">
+    <input type="hidden" name="id" th:value="${lookup.id}">
     <div class="modal-content">
         <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel4">Delete Level</h5>
+            <h5 class="modal-title" id="exampleModalLabel4">Delete Lookup</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
             <div class="row">
                 <div class="col mb-3">
-                    <label for="kode" class="form-label">Kode Level</label>
-                    <input type="hidden" id="id" name="id" />
-                    <input type="text" id="kode" name="kode" class="form-control" placeholder="Kode Level" />
+                <label for="group" class="form-label">Group</label>
+                <input type="text" id="group" name="group" th:value="${lookup.group}" class="form-control" placeholder="Group" readonly>
                 </div>
             </div>
             <div class="row">
                 <div class="col mb-3">
-                    <label for="nama" class="form-label">Nama Level</label>
-                    <input type="text" id="nama" name="kode" class="form-control" placeholder="Nama Level" />
+                    <label for="kode" class="form-label">Kode</label>
+                    <input type="text" id="kode" name="kode" th:value="${lookup.kode}" class="form-control" placeholder="Kode" readonly/>
                 </div>
             </div>
-            <div class="row g-2">
-                <div class="col mb-0">
-                    <label for="status" class="form-label">Status</label>
-                    <select id="status" name="status" class="form-select">
-                        <option value="">Pilih Status</option>
-                        <option value="1">Aktif</option>
-                        <option value="0">Non Aktif</option>
-                    </select>
+            <div class="row">
+                <div class="col mb-3">
+                    <label for="nama" class="form-label">Nama</label>
+                    <input type="text" id="nama" name="nama" th:value="${lookup.nama}" class="form-control" placeholder="Nama" readonly/>
                 </div>
-                <div class="col mb-0">
-                    <label for="riwayat" class="form-label">Status Riwayat</label>
-                    <select id="riwayat" name="riwayat" class="form-select">
-                        <option value="">Pilih Riwayat</option>
-                        <option value="1">Aktif</option>
-                        <option value="0">Non Aktif</option>
-                    </select>
+            </div>
+            <div class="row">
+                <div class="col-3">
+                    <label for="urutan" class="form-label">Urutan</label>
+                    <input type="text" id="urutan" name="urutan" th:value="${lookup.urutan}" class="form-control" placeholder="Urutan" readonly>
                 </div>
             </div>
         </div>
@@ -41,7 +36,7 @@
             <button type="button" class="btn btn-label-secondary" data-bs-dismiss="modal">
                 Close
             </button>
-            <button type="submit" class="btn btn-danger">Save changes</button>
+            <button type="submit" class="btn btn-danger">Delete</button>
         </div>
     </div>
 </form>
