--- a/src/main/resources/templates/pages/master/lookup/edit.html
+++ b/src/main/resources/templates/pages/master/lookup/edit.html
@@ -2,7 +2,7 @@
       th:method="post" th:object="${lookup}">
     <div class="modal-content">
         <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel4">Update lookup</h5>
+            <h5 class="modal-title" id="exampleModalLabel4">Update Lookup</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
