feat: add ruangan

--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -137,8 +137,8 @@
                     </a>
                 </li>
                 <li class="menu-item">
-                    <a th:href="@{~/master/siswa}" class="menu-link">
-                        <div data-i18n="Master Siswa">Master Siswa</div>
+                    <a th:href="@{~/master/tahun}" class="menu-link">
+                        <div data-i18n="Master Tahun Ajaran">Master Tahun Ajaran</div>
                     </a>
                 </li>
             </ul>
