--- a/src/main/resources/templates/pages/master/ruangan/delete.html
+++ b/src/main/resources/templates/pages/master/ruangan/delete.html
@@ -1,21 +1,30 @@
-<form xmlns:th="http://www.thymeleaf.org" th:id="form-level" th:action="@{~/master/ruangan/remove}" th:method="post">
+<form xmlns:th="http://www.thymeleaf.org" th:id="form-ruangan" th:action="@{~/master/ruangan/remove}"
+      th:method="post" th:object="${ruangan}">
+    <input type="hidden" name="id" th:value="${ruangan.id}">
     <div class="modal-content">
         <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLabel4">Delete Ruangan</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-            <div class="row">
-                <div class="col mb-3">
-                    <label for="kode" class="form-label">Kode Ruangan</label>
-                    <input type="hidden" name="id" id="id">
-                    <input type="text" id="kode" name="kode" class="form-control" placeholder="Kode Ruangan">
+            <div class="row g-2">
+                <div class="col mb-0">
+                    <label for="namaGedung" class="form-label">Gedung</label>
+                    <input type="text" id="namaGedung" name="namaGedung" class="form-control" th:value="${ruangan.namaGedung}" readonly>
+                </div>
+                <div class="col mb-0">
+                    <label for="kode" class="form-label">Kode</label>
+                    <input type="text" id="kode" name="kode" class="form-control" th:value="${ruangan.kode}" readonly>
                 </div>
             </div>
             <div class="row">
-                <div class="col mb-3">
-                    <label for="nama" class="form-label">Nama Ruangan</label>
-                    <input type="text" id="nama" name="nama" class="form-control" placeholder="Nama Ruangan">
+                <div class="col mb-0">
+                    <label for="nama" class="form-label">Nama</label>
+                    <input type="text" id="nama" name="nama" class="form-control" th:value="${ruangan.nama}" readonly>
+                </div>
+                <div class="col mb-0">
+                    <label for="kapasitas" class="form-label">Kapasitas</label>
+                    <input type="text" id="kapasitas" name="kapasitas" class="form-control" th:value="${ruangan.kapasitas}" readonly>
                 </div>
             </div>
         </div>
