--- a/src/main/resources/templates/pages/master/tahun/index.html
+++ b/src/main/resources/templates/pages/master/tahun/index.html
@@ -12,10 +12,10 @@
     <div class="card">
         <div class="card-header">
             <div class="d-flex align-items-md-end justify-content-md-between">
-                <h5 class="card-title mb-0" id="siswa-title" th:href="@{~/master/siswa/data}">Siswa</h5>
-                <button class="btn rounded-pill btn-primary btn-sm" id="btn-add" th:href="@{~/master/siswa/add}">
+                <h5 class="card-title mb-0" id="ta-title" th:href="@{~/master/tahun/data}">Tahun Ajaran</h5>
+                <button class="btn rounded-pill btn-primary btn-sm" id="btn-add" th:href="@{~/master/tahun/add}">
                     <i class="ti ti-check"></i> &nbsp;
-                    Tambah Data Siswa
+                    Tambah Tahun Ajaran
                 </button>
             </div>
             <div class="demo-inline-spacing d-flex align-items-start justify-content-start">
@@ -28,14 +28,12 @@
         </div>
         <div class="card-body">
             <div class="table-responsive text-nowrap">
-                <table id="table-siswa" class="table table-striped">
+                <table id="table-tahun" class="table table-striped">
                     <thead class="table-light">
                     <tr>
                         <th>No.</th>
-                        <th>NISN</th>
                         <th>Nama</th>
-                        <th>kotaTempatLahir</th>
-                        <th>tanggalLahir</th>
+                        <th>KodeKurikulum</th>
                         <th>Status</th>
                         <th class="cell-fit">Actions</th>
                     </tr>
@@ -47,8 +45,9 @@
     <!-- / Content -->
 </div>
 <!-- / Content -->
+
 <th:block layout:fragment="script">
-    <script th:src="@{~/scripts/master-siswa.js}"></script>
+    <script th:src="@{~/scripts/master-tahun.js}"></script>
 </th:block>
 </body>
 </html>
