--- a/src/main/resources/templates/pages/master/sesi/index.html
+++ b/src/main/resources/templates/pages/master/sesi/index.html
@@ -33,8 +33,9 @@
                     <tr>
                         <th>No.</th>
                         <th>Tahun Pelajaran</th>
-                        <th>Urut</th>
                         <th>Kode Kurikulum</th>
+                        <th>Kurikulum Name</th>
+                        <th>Urut</th>
                         <th>Status</th>
                         <th class="cell-fit">Actions</th>
                     </tr>
