--- a/src/main/resources/templates/pages/master/lookup/edit.html
+++ b/src/main/resources/templates/pages/master/lookup/edit.html
@@ -54,7 +54,7 @@
             <button type="button" class="btn btn-label-secondary" data-bs-dismiss="modal">
                 Close
             </button>
-            <button type="submit" name="submit" class="btn btn-primary">Simpan</button>
+            <button type="submit" name="submit" class="btn btn-warning">Save Changes</button>
         </div>
     </div>
 </form>
