feat: update person

--- a/src/main/resources/templates/pages/master/person/index.html
+++ b/src/main/resources/templates/pages/master/person/index.html
@@ -26,14 +26,23 @@
         </div>
         <div class="card-body">
             <div class="table-responsive text-nowrap">
-                <table id="table-lookup" class="table table-striped">
+                <table id="table-person" class="table table-striped">
                     <thead class="table-light">
                     <tr>
                         <th>No</th>
-                        <th>Group</th>
-                        <th>Kode</th>
+                        <th>User Id</th>
+                        <th>Nomor</th>
                         <th>Nama</th>
-                        <th>Urutan</th>
+                        <th>Alamat Tinggal</th>
+                        <th>NIK</th>
+                        <th>Tanggal Lahir</th>
+                        <th>Tempat Lahir</th>
+                        <th>Gender</th>
+                        <th>Agama</th>
+                        <th>Gol Darah</th>
+                        <th>No Tlp</th>
+                        <th>Email</th>
+                        <th>Status</th>
                         <th class="cell-fit">Actions</th>
                     </tr>
                     </thead>
