--- a/src/main/resources/templates/pages/master/sesi/delete.html
+++ b/src/main/resources/templates/pages/master/sesi/delete.html
@@ -12,8 +12,9 @@
                     <li th:each="err : ${#fields.allErrors()}" th:text="${err}" />
                 </ul>
             </div>
-            <input type="hidden" name="id" th:value="${sesi.id}">
-            <div class="form-group row">
+            <input type="hidden" name="id" th:value="${sesi.id}"/>
+
+            <div class="row">
                 <div class="col mb-3">
                     <label for="tahunAjaranId" class="form-label">Tahun Ajaran</label>
                     <select id="tahunAjaranId" name="tahunAjaranId" th:value="${sesi.tahunAjaranId}" data-allow-clear="true"
@@ -25,8 +26,7 @@
                         <span th:errors="*{tahunAjaranId}"></span>
                     </div>
                 </div>
-            </div>
-            <div class="form-group row">
+
                 <div class="col mb-3">
                     <label for="kurikulumId" class="form-label"></label>
                     <select id="kurikulumId" name="kurikulumId" th:value="${sesi.kurikulumId}" data-allow-clear="true"
@@ -39,23 +39,25 @@
                     </div>
                 </div>
             </div>
-            <div class="form-group row">
+            <div class="row">
                 <div class="col mb-3">
                     <label for="kodeKurikulum" class="form-label">Kode Kurikulum</label>
                     <input type="text" id="kodeKurikulum" name="kodeKurikulum" th:value="${sesi.kodeKurikulum}"
-                           th:class="${#fields.hasErrors('kodeKurikulum')}? 'form-control is-invalid': 'form-control'" placeholder="Kode Kurikulum" readonly />
+                           th:class="${#fields.hasErrors('kodeKurikulum')}? 'form-control is-invalid': 'form-control'" placeholder="Kode Kurikulum" />
                     <div th:if="${#fields.hasErrors('kodeKurikulum')}" class="invalid-feedback">
                         <span th:errors="*{kodeKurikulum}"></span>
                     </div>
                 </div>
-            </div>
-            <div class="form-group row">
+
                 <div class="col mb-3">
-                    <label for="urut" class="form-label">Urut</label>
-                    <input type="text" id="urut" name="urut" th:value="${sesi.urut}"
-                           th:class="${#fields.hasErrors('urut')}? 'form-control is-invalid': 'form-control'" placeholder="urut" readonly/>
-                    <div th:if="${#fields.hasErrors('urut')}" class="invalid-feedback">
-                        <span th:errors="*{urut}"></span>
+                    <label for="semester" class="form-label">Urut</label>
+                    <select id="semester" name="semester" th:value="${sesi.kurikulumId}" data-allow-clear="true"
+                            th:class="${#fields.hasErrors('semester')}? 'form-select select2 is-invalid': 'form-select select2'">
+                        <option value="">Pilih Semester</option>
+                        <option th:each="item : ${semester}" th:value="${item.kode}" th:text="${item.nama}" th:selected="${item.kode == sesi.semester}"></option>
+                    </select>
+                    <div th:if="${#fields.hasErrors('semester')}" class="invalid-feedback">
+                        <span th:errors="*{semester}"></span>
                     </div>
                 </div>
             </div>
