feat: update sesi

--- a/src/main/resources/templates/pages/master/sesi/index.html
+++ b/src/main/resources/templates/pages/master/sesi/index.html
@@ -17,6 +17,7 @@
                     <i class="ti ti-check"></i> &nbsp;
                     Tambah Kelompok
                 </button>
+                <input id="ta-url" type="hidden" th:href="@{~/master/ta/kurikulum}">
             </div>
             <div class="demo-inline-spacing d-flex align-items-start justify-content-start">
                 <button class="btn btn-sm btn-secondary">Copy</button>
