--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -141,6 +141,11 @@
                         <div data-i18n="Master Tahun Ajaran">Master Tahun Ajaran</div>
                     </a>
                 </li>
+                <li class="menu-item">
+                    <a th:href="@{~/master/course}" class="menu-link">
+                        <div data-i18n="Master Course">Master Course</div>
+                    </a>
+                </li>
             </ul>
         </li>
 
