--- a/src/main/resources/templates/pages/master/ruangan/add.html
+++ b/src/main/resources/templates/pages/master/ruangan/add.html
@@ -52,7 +52,7 @@
         </div>
         <div class="modal-footer input-group">
             <button type="submit" class="btn btn-success">
-                <i class="ti ti-check"></i> &nbsp;
+                <i class="ti ti-check"></i>
                 Save
             </button>
             <button type="button" class="btn btn-label-secondary" data-bs-dismiss="modal">
