feat: update properties sesi

--- a/src/main/resources/templates/pages/master/sesi/index.html
+++ b/src/main/resources/templates/pages/master/sesi/index.html
@@ -35,7 +35,7 @@
                         <th>Tahun Pelajaran</th>
                         <th>Kode Kurikulum</th>
                         <th>Kurikulum Name</th>
-                        <th>Urut</th>
+                        <th>Semester</th>
                         <th>Status</th>
                         <th class="cell-fit">Actions</th>
                     </tr>
